fixed scrollbar in overview

--- a/public/styles/overview.css
+++ b/public/styles/overview.css
@@ -26,12 +26,12 @@ html {
 
 /* Perfect Scrollbar Styling*/
 .ps__rail-y {
+    position: fixed;
     width: 4px !important;
     background-color: rgba(102, 69, 69, 0.1) !important;
     opacity: 1 !important;
     display: block !important;
-    right: 150px !important;
-
+    margin-right: var(--scrollbar-margin) !important;
 }
 
 .ps__thumb-y {
@@ -41,6 +41,12 @@ html {
     opacity: 1 !important;
     right: 0 !important;
 
+}
+
+.scrollbar-container {
+    position: relative;
+    height: 100%;
+    padding-right: 50px; /* Adjust based on your needs */
 }
 
 .close-btn {
@@ -79,6 +85,7 @@ html {
     height: 100vh;
     overflow-y: auto;
     margin-bottom: 120px;
+    position: relative;
 }
 
 .dot-container {
@@ -149,7 +156,6 @@ html {
     width: 100%;
     display: flex;
     justify-content: center;
-    overflow-y: auto;
     position: relative;
 }
 
